[project]
name = "support-ticket-openenv"
version = "0.1.0"
description = "Customer support ticket resolution RL environment"
authors = [{ name = "Akul Sawant" }]
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
