[project]
name = "support-ticket-openenv"
version = "0.1.0"
description = "Customer support ticket resolution RL environment"
authors = [{ name = "Akul Sawant" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
